fix content alignment

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -261,8 +261,9 @@ hr
 .section 
 	padding: 4rem 1.5rem
 
-.section
-  width: 100vw
+@media screen and (max-width: 1024px)
+  .section
+    width: 100vw
 	
 .underline--magical
   background-image: linear-gradient(to right, rgb(250, 112, 154) 0%, rgb(254, 225, 64) 100%)
